--- a/index.html
+++ b/index.html
@@ -68,13 +68,13 @@
 						<a class="nav-link link text-danger display-4" href="index.html#contacts02-9">Contacts</a>
 					</li></ul>
 				<div class="icons-menu">
-					<a class="iconfont-wrapper" href="https://mobiri.se">
+					<a class="iconfont-wrapper" href="tel:+13032557115">
 						<span class="p-2 mbr-iconfont mobi-mbri-phone mobi-mbri"></span>
 					</a>
-					<a class="iconfont-wrapper" href="https://mobiri.se">
+					<a class="iconfont-wrapper" href="mailto:terprie3@aol.com">
 						<span class="p-2 mbr-iconfont mobi-mbri-letter mobi-mbri"></span>
 					</a>
-					<a class="iconfont-wrapper" href="https://mobiri.se">
+					<a class="iconfont-wrapper" href="https://maps.app.goo.gl/m31Qd7emAQYPxSqH9">
 						<span class="p-2 mbr-iconfont mobi-mbri-map-pin mobi-mbri"></span>
 					</a>
 					
