Updated start now button to slow scroll

--- a/index.html
+++ b/index.html
@@ -96,7 +96,20 @@
 			<div class="col-md-12 col-lg-9">
 				<h1 class="mbr-section-title mbr-fonts-style mb-4 display-1"><strong>Heavenly Aromatherapy</strong></h1>
 				<p class="mbr-text mbr-fonts-style mb-4 display-7">Discover tranquility and balance through our curated selection of aromatherapy products and spiritual services. At Heavenly Aromatherapy, we are dedicated to enhancing your well-being with natural elements that soothe the mind, body, and spirit. Explore our offerings to find the perfect path to inner peace.</p>
-				<div class="mbr-section-btn mt-3"><a class="btn btn-white-outline display-7" href="index.html#form02-6">Start now</a> <a class="btn btn-white-outline display-7" href="index.html#header01-7">Learn More</a></div>
+				<div class="mbr-section-btn mt-3">
+				    <a class="btn btn-white-outline display-7" 
+				       href="#" 
+				       onclick="document.getElementById('form02-6').scrollIntoView({behavior: 'smooth'}); return false;">
+				       Start Now
+				    </a>
+				    
+				    <a class="btn btn-white-outline display-7" 
+				       href="#" 
+				       onclick="document.getElementById('header01-7').scrollIntoView({behavior: 'smooth'}); return false;">
+				       Learn More
+				    </a>
+				</div>
+
 			</div>
 		</div>
 		<div class="row mt-5 justify-content-center">
