--- a/index.html
+++ b/index.html
@@ -99,13 +99,13 @@
 				<div class="mbr-section-btn mt-3">
 				    <a class="btn btn-white-outline display-7" 
 				       href="#" 
-				       onclick="document.getElementById('form02-6').scrollIntoView({behavior: 'smooth'}); return false;">
+				       onclick="document.getElementById('form02-6').scrollIntoView({behavior: 'instant'}); return false;">
 				       Start Now
 				    </a>
 				    
 				    <a class="btn btn-white-outline display-7" 
 				       href="#" 
-				       onclick="document.getElementById('header01-7').scrollIntoView({behavior: 'smooth'}); return false;">
+				       onclick="document.getElementById('header01-7').scrollIntoView({behavior: 'instant'}); return false;">
 				       Learn More
 				    </a>
 				</div>
