--- a/index.html
+++ b/index.html
@@ -86,10 +86,6 @@
 </section>
 
 <section data-bs-version="5.1" class="header5 cid-tJS6uM4N87" id="header05-1">
-	
-
-	
-	
 	<div class="topbg"></div>
 	<div class="align-center container">
 		<div class="row justify-content-center">
@@ -99,17 +95,24 @@
 				<div class="mbr-section-btn mt-3">
 				    <a class="btn btn-white-outline display-7" 
 				       href="#" 
-				       onclick="document.getElementById('form02-6').scrollIntoView({behavior: 'instant'}); return false;">
+				       onclick="document.getElementById('form02-6').scrollIntoView({
+				           behavior: 'auto',
+				           block: 'start',
+				           inline: 'nearest'
+				       }); return false;">
 				       Start Now
 				    </a>
 				    
 				    <a class="btn btn-white-outline display-7" 
 				       href="#" 
-				       onclick="document.getElementById('header01-7').scrollIntoView({behavior: 'instant'}); return false;">
+				       onclick="document.getElementById('header01-7').scrollIntoView({
+				           behavior: 'auto',
+				           block: 'start',
+				           inline: 'nearest'
+				       }); return false;">
 				       Learn More
 				    </a>
 				</div>
-
 			</div>
 		</div>
 		<div class="row mt-5 justify-content-center">
