--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 				    <a class="btn btn-white-outline display-7" 
 				       href="#" 
 				       onclick="document.getElementById('form02-6').scrollIntoView({
-				           behavior: 'auto',
+				           behavior: 'instant',
 				           block: 'start',
 				           inline: 'nearest'
 				       }); return false;">
@@ -106,7 +106,7 @@
 				    <a class="btn btn-white-outline display-7" 
 				       href="#" 
 				       onclick="document.getElementById('header01-7').scrollIntoView({
-				           behavior: 'auto',
+				           behavior: 'instant',
 				           block: 'start',
 				           inline: 'nearest'
 				       }); return false;">
